@@ -1,3 +1,8 @@
+2009-07-?? dispatcher ??????
+
+* small changes: config structures are anonymous, extra warnings
+* make syslog ids values configurable for dispatcher and worker
+
 2009-07-03 dispatcher 0.9.93
 
 * use standard bool instead of custom typedef
